font-size: 12px;

--- a/script/style.css
+++ b/script/style.css
@@ -38,6 +38,7 @@ h4 {
 .cat-title {
     color: #fbb700 !important;
     font-weight: 500;
+    font-size: 12px;
     text-transform: uppercase;
     text-align: left;
     float: left;
