match header font

--- a/script/style.css
+++ b/script/style.css
@@ -38,7 +38,7 @@ h4 {
 .cat-title {
     color: #fbb700 !important;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 0.85714286rem;
     text-transform: uppercase;
     text-align: left;
     float: left;
