--- a/script/style.css
+++ b/script/style.css
@@ -72,5 +72,6 @@ div.income .amount {
     width: 50px;
 }
 .subgroup {
-    left: 10px;
+    margin-left: 20px;
+    width: calc(100% - 20px) !important;
 }
