fix border color

--- a/script/style.css
+++ b/script/style.css
@@ -18,7 +18,7 @@ div.container {
     /* min-height: 0px; */
     background: #fff;
     padding: 0 0.5em;
-    border: 1px solid #DCDCDC;
+    border: 1px solid #303030;
     border-radius: 0.28571429rem;
 }
 h4 {
