--- a/script/style.css
+++ b/script/style.css
@@ -32,7 +32,8 @@ h4 {
 .progress {
     background-color: #272727 !important;
     width: 100%;
-    font-size: 0.5rem
+    font-size: 1.0rem;
+    height: 60px;
 }
 .cat-title {
     color: #fbb700 !important;
